--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <button onclick="document.getElementById('bgmusic').play()" class="bg-pink-500 text-white px-4 py-2 rounded-lg shadow">
+  Включить музыку 🎵
+</button>
+  
+<audio id="bgmusic" loop>
+  <source src="s.mp3" type="audio/mpeg">
+</audio>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Приглашение на свадьбу</title>
