--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <footer class="text-sm text-gray-500">
-      С любовью, Александр и Екатерина 💕
+      С любовью, Артем и Дашуля 💕
     </footer>
   </div>
 </body>
