--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <audio id="bgmusic" loop>
   <source src="s.mp3" type="audio/mpeg">
 </audio>
+  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Marck Script', cursive;
+  }
+</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Приглашение на свадьбу</title>
@@ -20,9 +26,9 @@
 
     <div class="bg-white rounded-2xl shadow-md p-6 mb-8">
       <h2 class="text-2xl font-semibold text-pink-600 mb-2">Артем & Дашуля</h2>
-      <p class="text-lg mb-2">📅 15 августа 2025 года</p>
-      <p class="text-lg mb-2">📍 Москва, ресторан "Вдохновение"</p>
-      <p class="text-lg">Начало в 15:00</p>
+      <p class="text-lg mb-2">📅 5 июля 2025 года</p>
+      <p class="text-lg mb-2">📍 Санкт-Петербург</p>
+      <p class="text-lg">Начало в 10:00</p>
     </div>
 
     <div class="mb-8">
