--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 <audio id="bgmusic" loop>
   <source src="s.mp3" type="audio/mpeg">
 </audio>
-  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Приглашение на свадьбу</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Marck Script', cursive;
+    }
+    .fancy-title {
+      font-family: 'Playfair Display', serif;
+      font-style: italic;
+    }
+  </style>
 </head>
 <body class="bg-pink-50 text-gray-800 font-sans">
   <div class="max-w-3xl mx-auto p-6 text-center">
