--- a/index.html
+++ b/index.html
@@ -8,39 +8,59 @@
 <audio id="bgmusic" loop>
   <source src="s.mp3" type="audio/mpeg">
 </audio>
-   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Приглашение на свадьбу</title>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Playfair+Display:ital@1&display=swap&subset=cyrillic" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Marck Script', cursive;
     }
+
     .fancy-title {
       font-family: 'Playfair Display', serif;
       font-style: italic;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
-<body class="bg-pink-50 text-gray-800 font-sans">
+<body class="bg-pink-50 text-gray-800">
   <div class="max-w-3xl mx-auto p-6 text-center">
-    <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4">Мы женимся!</h1>
+    
+    <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся!</h1>
     <p class="text-xl mb-8">С любовью приглашаем вас на нашу свадьбу</p>
 
     <div class="bg-white rounded-2xl shadow-md p-6 mb-8">
-      <h2 class="text-2xl font-semibold text-pink-600 mb-2">Артем & Дашуля</h2>
-      <p class="text-lg mb-2">📅 5 июля 2025 года</p>
-      <p class="text-lg mb-2">📍 Санкт-Петербург</p>
-      <p class="text-lg">Начало в 10:00</p>
+      <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Александр & Екатерина</h2>
+      <p class="text-lg mb-2">📅 15 августа 2025 года</p>
+      <p class="text-lg mb-2">📍 Москва, ресторан "Вдохновение"</p>
+      <p class="text-lg">Начало в 15:00</p>
     </div>
+
     <div class="mb-8">
-      <h3 class="text-xl font-semibold text-pink-600 mb-2">Программа дня</h3>
+      <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
       <ul class="text-left list-disc list-inside">
-        <li>10:00 — Церемония</li>
-        <li>14:00 — Праздник</li>>
+        <li>15:00 — Сбор гостей</li>
+        <li>16:00 — Церемония</li>
+        <li>17:00 — Фотосессия</li>
+        <li>18:00 — Праздничный ужин и танцы</li>
       </ul>
     </div>
 
+    <div class="mb-10">
+      <p class="text-lg">Пожалуйста, подтвердите свое присутствие до <strong>1 августа</strong></p>
+      <a href="mailto:wedding@example.com" class="inline-block mt-4 bg-pink-600 hover:bg-pink-700 text-white font-semibold py-2 px-4 rounded-full transition">Подтвердить участие</a>
+    </div>
+
     <footer class="text-sm text-gray-500">
-      С любовью, Артем и Дашуля 💕
+      С любовью, <span class="fancy-title">Александр и Екатерина 💕</span>
     </footer>
   </div>
 </body>
