--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 
     <div class="bg-white rounded-2xl shadow-md p-6 mb-8">
       <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
-      <p class="text-lg mb-2">📅 5 июля 2025 "</p>
+      <p class="text-lg mb-2">📅 5 июля 2025 </p>
       <p class="text-lg">Начало в 10:00</p>
     </div>
 
     <div class="mb-8">
       <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
       <ul class="text-left list-disc list-inside">
-        <li>15:00 — Сбор гостей</li>
-        <li>16:00 — Церемония</li>
+        <li>10:00 — Начало церемонии</li>
+        <li>14:00 — Свадьба пела и плясала</li>
       </ul>
     </div>
-    
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&amp;source=constructor" width="644" height="498" frameborder="0"></iframe>
     <footer class="text-sm text-gray-500">
       С любовью, <span class="fancy-title">Артем и Дашуля 💕</span>
     </footer>
