--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="flex justify-between mb-6">
   
   <div class="w-full md:w-1/2 pr-4">
-    <h4 class="text-lg font-semibold mb-2">Церемония: ЗАГС Петроградского района</h4>
+    <h4 class="text-lg font-semibold mb-2">ЗАГС Петроградского района</h4>
     <p class="mb-4 text-lg">Санкт-Петербург, Большая Монетная ул., 17-19</p>
     
     <div class="rounded-xl overflow-hidden shadow-lg mb-4">
