--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
   </style>
 </head>
 <body class="bg-pink-50 text-gray-800">
-
-  <div class="max-w-3xl mx-auto p-6 text-center">
+      
+<div class="flex flex-col items-center justify-center mb-10 text-center">
+  <div class="mb-4">
+    <img src="s.png">
+  </div>
     
     <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся!</h1>
     <p class="text-xl mb-8">С любовью приглашаем вас на нашу свадьбу</p>
