--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
     <img src="s.png" class="mx-auto w-32 h-32 object-contain" />
   </div>
     
-    <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся!</h1>
-    <p class="text-xl mb-8">С любовью приглашаем вас на нашу свадьбу</p>
+    <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся !</h1>
+    <p class="text-xl mb-8">С любовью приглашаем Вас на нашу свадебку !</p>
 
     <div class="bg-white rounded-2xl shadow-md p-6 mb-8">
       <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
       <p class="text-lg mb-2">📅 5 июля 2025 </p>
-      <p class="text-lg">Начало в 10:00</p>
     </div>
 
     <div class="mb-8">
       <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
       <ul class="text-left list-disc list-inside">
-        <li>10:00 — Начало церемонии</li>
+        <li>10:00 — Взаимное награждение свадебными кольцами</li>
+        <li>13:00 — Фуршет</li>
         <li>14:00 — Свадьба пела и плясала</li>
       </ul>
     </div>
- <h3 class="text-xl font-semibold text-pink-600 mb-4 fancy-title">Как добраться</h3>
+ <h3 class="text-xl font-semibold text-pink-600 mb-4 fancy-title">Куда идти</h3>
 
 <div class="flex justify-between mb-6">
   
