--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
 <div class="flex flex-col items-center justify-center mb-10 text-center">
   <div class="mb-4">
-    <img src="s.png" class="mx-auto w-40 h-40 object-contain" />
+    <img src="s2.png" class="mx-auto w-40 h-40 object-contain" />
   </div>
     
     <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся !</h1>
