--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   
   <div class="w-full md:w-1/2 pr-4">
     <h4 class="text-lg font-semibold mb-2">ЗАГС Петроградского района</h4>
-    <p class="mb-4 text-lg">Санкт-Петербург, Большая Монетная ул., 17-19</p>
+    <p class="mb-4 text-lg">Санкт-Петербург, Большая Монетная ул., 17</p>
     
     <div class="rounded-xl overflow-hidden shadow-lg mb-4">
       <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
