--- a/index.html
+++ b/index.html
@@ -101,12 +101,9 @@
     </a>
   </div>
       
-      С любовью, <span class="fancy-title">Артем и Дашуля 💕</span>
-    </footer>
 </div>
        <div class="carousel-container my-10">
-    <h3 class="text-4xl font-bold text-pink-600 text-center mb-6">Какие мы милые</h3>
-
+    <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Какие мы милые</span> </h3>
     <div class="carousel">
       <div><img src="1.jpg" alt="Мы" /></div>
       <div><img src="2.jpg" alt="Мы" /></div>
