--- a/index.html
+++ b/index.html
@@ -133,5 +133,8 @@
       });
     });
   </script>
+       <footer class="text-sm text-gray-500">
+      С любовью, <span class="fancy-title">Артем и Дашуля 💕</span>
+    </footer>
 </body>
 </html>
