--- a/index.html
+++ b/index.html
@@ -36,23 +36,44 @@
       margin: 0 auto;            
     }
         
-  .music-button {
-      position: fixed;   
-      top: 20px;          
-      left: 20px;       
-      background-color: #ff7b7b; 
-      color: white;    
-      border: none;       
-      padding: 15px 25px; 
-      font-size: 16px;   
-      border-radius: 25px; 
-      cursor: pointer;   
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.3s;
+     #music-button {
+      position: absolute;    /* Позиционируем кнопку */
+      top: 20px;             /* Отступ сверху */
+      left: 20px;            /* Отступ слева */
+      background: linear-gradient(45deg, #ff7b7b, #ff4b4b); /* Градиентный фон */
+      color: white;         /* Белый цвет текста */
+      border: 2px solid #ff7b7b; /* Розовая граница */
+      padding: 15px 30px;   /* Размеры кнопки */
+      font-size: 18px;      /* Размер шрифта */
+      font-weight: bold;    /* Жирный шрифт */
+      border-radius: 50px;  /* Скругленные углы */
+      cursor: pointer;     /* Курсор в виде руки */
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); /* Тень */
+      transition: transform 0.3s, box-shadow 0.3s, background 0.3s, border 0.3s; /* Плавные анимации */
     }
 
+    /* Эффект при наведении */
     #music-button:hover {
-      background-color: #ff4b4b;
+      background: linear-gradient(45deg, #ff4b4b, #ff7b7b); /* Изменение градиента при наведении */
+      transform: translateY(-4px);  /* Легкое поднятие кнопки */
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Увеличиваем тень */
+      border-color: #ff4b4b; /* Розовая граница меняется при наведении */
+    }
+
+    /* Эффект при нажатии */
+    #music-button:active {
+      transform: translateY(2px); /* Подсвечиваем эффект нажатия */
+    }
+
+    /* Дополнительные стили для остальной страницы */
+    .container {
+      padding: 20px;
+      text-align: center;
+      height: 1500px; /* Просто для того, чтобы был скролл */
+    }
+
+    .content {
+      margin-top: 50px;
     }
     
   </style>
