--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
     <div class="mb-8">
       <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
       <ul class="text-left list-disc list-inside">
-        <li>10:00 — Взаимное награждение свадебными кольцами</li>
-        <li>13:00 — Фуршет</li>
-        <li>14:00 — Свадьба пела и плясала</li>
+        <li>10:00 — Взаимное награждение свадебными кольцами 💍</li>
+        <li>13:00 — Фуршет 🍸</li>
+        <li>14:00 — Свадьба пела и плясала 💃</li>
+        <li>19:00 — Пора баиньки 😴</li>
       </ul>
     </div>
  <h3 class="text-xl font-semibold text-pink-600 mb-4 fancy-title">Куда идти</h3>
@@ -143,7 +144,6 @@
     <p class="mb-4 text-lg">Санкт-Петербург, просп. Юрия Гагарина, 14к1</p>
     
     <div class="rounded-xl overflow-hidden shadow-lg mb-4">
-      <!-- Используем 100% ширины для iframe -->
       <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7b4442cee172a858fbdc8662233fa9b625756a6a33f027fa49ac0703037fc624&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
     </div>
 
