--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
   
   <style>
     body {
-      font-family: 'Open Sans', sans-serif;
-    }
+  margin-top: 100px;
+  font-family: 'Open Sans', sans-serif;
+  padding: 16px; 
+  padding-top: 24px; 
+  padding-bottom: 24px; 
+  margin: 0;
+  background-color: #f7f7f7;
+  box-sizing: border-box;
+}
 
     .fancy-title {
       font-family: 'Playfair Display', serif;
