--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
   
   <style>
     body {
-  margin-top: 100px;
   font-family: 'Open Sans', sans-serif;
-  padding: 16px; 
-  padding-top: 24px; 
-  padding-bottom: 24px; 
-  margin: 0;
   background-color: #f7f7f7;
   box-sizing: border-box;
 }
@@ -82,6 +77,7 @@
     
   </style>
 </head>
+  <body class="px-4 pt-6 pb-6">
         <button id="music-button" onclick="toggleMusic()">Включить музыку 🎵</button>
 
   <audio id="background-music" loop>
