--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
       font-style: italic;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
-        .carousel img {
-      width: 100%;            
-      height: 400px;           
-      object-fit: cover;         
-      margin: 0 auto;          
-      border-radius: 8px;     
-    }
-
     .carousel-container {
-      max-width: 400px;        
-      margin: 0 auto;            
-    }
+  max-width: 100%;
+  padding: 0 1rem;
+}
+
+.carousel img {
+  width: 100%;
+  height: auto;
+  max-height: 500px;
+  object-fit: cover;
+  border-radius: 16px;
+  margin: 0 auto;
+}
         
      #music-button {
       position: absolute;
