--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
       </div>
 
-      <div class="carousel-container my-10">
+      <div class="carousel-container my-10 max-w-screen-md mx-auto px-4">
         <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Какие мы милые</span></h3>
         <div class="carousel">
           <div><img src="1.jpg" alt="Мы" /></div>
