--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       button.style.top = 20 + scrollY + "px";
     };
   </script>
-  <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover z-[-10]">
+<video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover" style="z-index: -1;">
   <source src="s.mp4" type="video/mp4">
   Ваш браузер не поддерживает видео фон.
 </video>
