--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     };
   </script>
 <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover" style="z-index: -1;">
-  <source src="s.mp4" type="video/mp4">
+  <source src="ss.mp4" type="video/mp4">
   Ваш браузер не поддерживает видео фон.
 </video>
   <div class="max-w-screen-md mx-auto px-4 pt-52 pb-6">
