--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
       margin: 0 auto;
     }
 
-    #music-button {
-      position: absolute;
-      top: 20px;
-      left: 20px;
+    #music-button, .map-button {
       background: linear-gradient(45deg, #ff7b7b, #ff4b4b);
       color: white;
       border: 2px solid #ff7b7b;
@@ -55,17 +52,32 @@
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
       transition: transform 0.3s, box-shadow 0.3s, background 0.3s, border 0.3s;
+      text-decoration: none;
+      display: inline-block;
+      margin: 10px 0;
     }
 
-    #music-button:hover {
+    .map-button:hover, #music-button:hover {
       background: linear-gradient(45deg, #ff4b4b, #ff7b7b);
       transform: translateY(-4px);
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
       border-color: #ff4b4b;
     }
 
-    #music-button:active {
+    .map-button:active, #music-button:active {
       transform: translateY(2px);
+    }
+
+    #music-button {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
+    .map-buttons-container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
   </style>
 </head>
@@ -114,7 +126,7 @@
       </div>
 
       <div class="mb-8">
-        <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
+        <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title bg-white rounded-2xl shadow-md p-4">Программа дня</h3>
         <ul class="text-left list-disc list-inside">
           <li>10:00 — Взаимное награждение свадебными кольцами 💍</li>
           <li>13:00 — Фуршет 🍸</li>
@@ -127,21 +139,25 @@
 
       <div class="flex flex-col md:flex-row justify-between mb-6 gap-6">
         <div class="w-full md:w-1/2">
-          <h4 class="text-lg font-semibold mb-2">ЗАГС Петроградского района</h4>
+          <h4 class="text-lg font-semibold mb-2 fancy-title bg-white rounded-2xl shadow-md p-4">ЗАГС Петроградского района</h4>
           <p class="mb-4 text-lg">Санкт-Петербург, Большая Монетная ул., 17-19</p>
           <div class="rounded-xl overflow-hidden shadow-lg mb-4">
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
           </div>
-          <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink">Открыть в Яндекс.Картах</a>
+          <div class="map-buttons-container">
+            <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
+          </div>
         </div>
 
         <div class="w-full md:w-1/2">
-          <h4 class="text-lg font-semibold mb-2">Банкет: Банкетный зал "Праздник"</h4>
+          <h4 class="text-lg font-semibold mb-2 fancy-title bg-white rounded-2xl shadow-md p-4">Банкет: Банкетный зал "Праздник"</h4>
           <p class="mb-4 text-lg">Санкт-Петербург, просп. Юрия Гагарина, 14к1</p>
           <div class="rounded-xl overflow-hidden shadow-lg mb-4">
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7b4442cee172a858fbdc8662233fa9b625756a6a33f027fa49ac0703037fc624&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
           </div>
-          <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink">Открыть в Яндекс.Картах</a>
+          <div class="map-buttons-container">
+            <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
+          </div>
         </div>
       </div>
 
