--- a/index.html
+++ b/index.html
@@ -158,24 +158,24 @@
             <div class="rounded-xl overflow-hidden shadow-lg mb-4">
               <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
             </div>
-            <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
+            <a href="https://yandex.ru/maps/-/CHVZbLmo" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
           </div>
         </div>
 
         <div class="w-full md:w-1/2">
           <div class="frame">
-            <h4 class="text-lg font-semibold mb-2">Банкет: Банкетный зал "Праздник"</h4>
+            <h4 class="text-lg font-semibold mb-2">Банкетный зал "Праздник"</h4>
             <p class="mb-4 text-lg">Санкт-Петербург, просп. Юрия Гагарина, 14к1</p>
             <div class="rounded-xl overflow-hidden shadow-lg mb-4">
               <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7b4442cee172a858fbdc8662233fa9b625756a6a33f027fa49ac0703037fc624&amp;source=constructor" width="100%" height="240" frameborder="0"></iframe>
             </div>
-            <a href="https://yandex.ru/maps/?um=constructor%3Ae85ac35d37eac6e87ef0ee871505ba7261e4de6802fee4db4b5c2ef7bf3a5e97&source=constructorLink" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
+            <a href="https://yandex.ru/maps/-/CHVZbHpM" class="map-button" target="_blank">Открыть на Яндекс Картах</a>
           </div>
         </div>
       </div>
 
       <div class="carousel-container my-10 max-w-screen-md mx-auto px-4">
-        <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Какие мы милые</span></h3>
+        <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Такие мы милые</span></h3>
         <div class="carousel">
           <div><img src="1.jpg" alt="Мы" /></div>
           <div><img src="2.jpg" alt="Мы" /></div>
