--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
           <div><img src="3.jpg" alt="Мы" /></div>
           <div><img src="4.jpg" alt="Мы" /></div>
           <div><img src="5.jpg" alt="Мы" /></div>
-          <div><img src="6.jpg" alt="Мы" /></div>
+          <div><img src="6.jpg" alt="Мы" /></div><div>
+          <div><img src="7.jpg" alt="Мы" /></div>
+          <div><img src="8.jpg" alt="Мы" /></div>
+          <div><img src="9.jpg" alt="Мы" /></div>
+          <div><img src="10.jpg" alt="Мы" /></div>
+          <div><img src="11.jpg" alt="Мы" /></div>
         </div>
       </div>
 
