--- a/index.html
+++ b/index.html
@@ -94,9 +94,18 @@
     }
 
     .title-background {
-      background: rgba(0, 0, 0, 0.5); /* Полупрозрачный темный фон */
+      background: rgba(255, 182, 193, 0.3); /* Очень бледно-розовый, прозрачный */
       padding: 15px;
       border-radius: 8px;
+    }
+
+    .invitation-bar {
+      background: rgba(255, 182, 193, 0.5); /* Очень бледно-розовый, полупрозрачный */
+      text-align: center;
+      padding: 10px 0;
+      font-size: 20px;
+      font-weight: bold;
+      color: #d1006c;
     }
   </style>
 </head>
@@ -134,6 +143,10 @@
     <div class="flex flex-col items-center justify-center mb-10 text-center">
       <div class="mb-4">
         <img src="s2.png" class="mx-auto w-40 h-30 object-contain" />
+      </div>
+
+      <div class="invitation-bar">
+        С любовью приглашаем вас на нашу свадебку!
       </div>
 
       <div class="title-background">
