--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
       font-weight: bold;
       color: #d1006c;
     }
+
+    .combined-frame {
+      background-color: #f9e0e6; /* Нежно-розовый цвет */
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .combined-frame h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #d1006c;
+    }
+
+    .combined-frame p {
+      font-size: 1.25rem;
+      margin-top: 10px;
+      color: #d1006c;
+    }
   </style>
 </head>
 <body class="bg-pink-50 text-gray-800">
@@ -152,9 +173,14 @@
       <div class="title-background">
         <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся !</h1>
       </div>
-      <p class="text-xl mb-8">С любовью приглашаем Вас на нашу свадебку !</p>
 
-      <div class="bg-[#f8c8d4] rounded-2xl shadow-md p-6 mb-8"> <!-- Бледно-розовая рамка -->
+      <!-- Объединенная рамка -->
+      <div class="combined-frame">
+        <h1 class="fancy-title">Мы женимся !</h1>
+        <p>С любовью приглашаем вас на нашу свадебку !</p>
+      </div>
+
+      <div class="bg-[#f9e0e6] rounded-2xl shadow-md p-6 mb-8"> <!-- Бледно-розовая рамка -->
         <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
         <p class="text-lg mb-2">📅 5 июля 2025 </p>
       </div>
