--- a/index.html
+++ b/index.html
@@ -166,25 +166,15 @@
         <img src="s2.png" class="mx-auto w-40 h-30 object-contain" />
       </div>
 
-      <div class="invitation-bar">
-        С любовью приглашаем вас на нашу свадебку!
-      </div>
+     <div class="combined-frame">
+  <h1 class="fancy-title">Мы женимся !</h1>
+  <p>С любовью приглашаем вас на нашу свадебку !</p>
+</div>
 
-      <div class="title-background">
-        <h1 class="text-4xl md:text-5xl font-bold text-pink-700 mb-4 fancy-title">Мы женимся !</h1>
-      </div>
-
-      <!-- Объединенная рамка -->
-      <div class="combined-frame">
-        <h1 class="fancy-title">Мы женимся !</h1>
-        <p>С любовью приглашаем вас на нашу свадебку !</p>
-      </div>
-
-      <div class="bg-[#f9e0e6] rounded-2xl shadow-md p-6 mb-8"> <!-- Бледно-розовая рамка -->
-        <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
-        <p class="text-lg mb-2">📅 5 июля 2025 </p>
-      </div>
-
+<div class="bg-[#f9e0e6] rounded-2xl shadow-md p-6 mb-8">
+  <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
+  <p class="text-lg mb-2">📅 5 июля 2025 </p>
+</div>
       <div class="frame">
         <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
         <ul class="text-left list-disc list-inside">
