--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <img src="s2.png" class="mx-auto w-40 h-30 object-contain" />
       </div>
 
-     <div class="combined-frame">
+<div class="combined-frame" style="background-color: rgba(249, 224, 230, 0.2);">
   <h1 class="fancy-title">Мы женимся !</h1>
   <p>С любовью приглашаем вас на нашу свадебку !</p>
 </div>
