--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
         <img src="s2.png" class="mx-auto w-40 h-30 object-contain" />
       </div>
 
-<div class="combined-frame" style="background-color: rgba(249, 224, 230, 0.2);">
+<div class="combined-frame" style="background-color: rgba(249, 224, 230, 0.4);">
   <h1 class="fancy-title">Мы женимся !</h1>
-  <p>С любовью приглашаем вас на нашу свадебку !</p>
+  <p style="color: black;">С любовью приглашаем вас на нашу свадебку !</p>
 </div>
 
-<div class="bg-[#f9e0e6] rounded-2xl shadow-md p-6 mb-8">
+<div class="combined-frame" style="background-color: rgba(249, 224, 230, 0.2);">
   <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
   <p class="text-lg mb-2">📅 5 июля 2025 </p>
 </div>
