--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       </div>
 
       <div class="carousel-container my-10 max-w-screen-md mx-auto px-4">
-        <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Такие мы милые</span></h3>
+        <h3 class="text-4xl font-bold text-pink-600 text-center mb-6"><span class="fancy-title">Такие вот мы милые</span></h3>
         <div class="carousel">
           <div><img src="1.jpg" alt="Мы" /></div>
           <div><img src="2.jpg" alt="Мы" /></div>
