--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 <div class="combined-frame" style="background-color: rgba(249, 224, 230, 0.2);">
   <h2 class="text-2xl font-semibold text-pink-600 mb-2 fancy-title">Артем & Дашуля</h2>
-  <p class="text-lg mb-2">📅 5 июля 2025 </p>
+  <p class="text-lg mb-2"> <p style="color: black;">📅 5 июля 2025 </p>
 </div>
       <div class="frame">
         <h3 class="text-xl font-semibold text-pink-600 mb-2 fancy-title">Программа дня</h3>
