--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     }
 
     .frame {
-      background-color: #f9e0e6; /* Нежно-розовый цвет */
+      background-color: #f9e0e6; 
       border-radius: 16px;
       padding: 20px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -94,13 +94,13 @@
     }
 
     .title-background {
-      background: rgba(255, 182, 193, 0.3); /* Очень бледно-розовый, прозрачный */
+      background: rgba(255, 182, 193, 0.3); 
       padding: 15px;
       border-radius: 8px;
     }
 
     .invitation-bar {
-      background: rgba(255, 182, 193, 0.5); /* Очень бледно-розовый, полупрозрачный */
+      background: rgba(255, 182, 193, 0.5); 
       text-align: center;
       padding: 10px 0;
       font-size: 20px;
@@ -109,7 +109,7 @@
     }
 
     .combined-frame {
-      background-color: #f9e0e6; /* Нежно-розовый цвет */
+      background-color: #f9e0e6;
       border-radius: 16px;
       padding: 20px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
